--- a/SimpleResourceAppAsp/SimpleResourceAppAsp.csproj
+++ b/SimpleResourceAppAsp/SimpleResourceAppAsp.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleResourceAppModels\SimpleResourceAppModels.csproj" />
+  </ItemGroup>
+
 </Project>
